--- a/css/timeline.css
+++ b/css/timeline.css
@@ -19,268 +19,184 @@ a{
 body {
     background-color: black;
   }
-  .p-r-l-15 {
-    padding: 15px 30px!important;
-  }
-  img
-  {
-    vertical-align: middle;
-  }
-  .img-responsive
-  {
-      display: block;
-      height: auto;
-      max-width: 100%;
-  }
-  .img-rounded
-  {
-      border-radius: 3px;
-  }
-  .img-thumbnail
-  {
-      background-color: #C8E5E8;
-      border: 1px solid #D8FF32;
-      border-radius: 3px;
-      display: inline-block;
-      height: auto;
-      line-height: 1.428571429;
-      max-width: 100%;
-      moz-transition: all .2s ease-in-out;
-      o-transition: all .2s ease-in-out;
-      padding: 2px;
-      transition: all .2s ease-in-out;
-      webkit-transition: all .2s ease-in-out;
-  }
-  .img-circle
-  {
-      border-radius: 50%;
-  }
-  .timeline-centered {
-      position: relative;
-      margin-bottom: 30px;
-  }
-  
-      .timeline-centered:before, .timeline-centered:after {
-          content: " ";
-          display: table;
-      }
-  
-      .timeline-centered:after {
-          clear: both;
-      }
-  
-      .timeline-centered:before, .timeline-centered:after {
-          content: " ";
-          display: table;
-      }
-  
-      .timeline-centered:after {
-          clear: both;
-      }
-  
-      .timeline-centered:before {
-          content: '';
-          position: absolute;
-          display: block;
-          width: 4px;
-          background: #f5f5f6;
-          left: 50%;
-          top: 20px;
-          bottom: 20px;
-          margin-left: -4px;
-      }
-  
-      .timeline-centered .timeline-entry {
-          position: relative;
-          width: 50%;
-          float: right;
-          margin-bottom: 70px;
-          clear: both;
-      }
-  
-          .timeline-centered .timeline-entry:before, .timeline-centered .timeline-entry:after {
-              content: " ";
-              display: table;
-          }
-  
-          .timeline-centered .timeline-entry:after {
-              clear: both;
-          }
-  
-          .timeline-centered .timeline-entry:before, .timeline-centered .timeline-entry:after {
-              content: " ";
-              display: table;
-          }
-  
-          .timeline-centered .timeline-entry:after {
-              clear: both;
-          }
-  
-          .timeline-centered .timeline-entry.begin {
-              margin-bottom: 0;
-          }
-  
-          .timeline-centered .timeline-entry.left-aligned {
-              float: left;
-          }
-  
-              .timeline-centered .timeline-entry.left-aligned .timeline-entry-inner {
-                  margin-left: 0;
-                  margin-right: -18px;
-              }
-  
-                  .timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-time {
-                      left: auto;
-                      right: -100px;
-                      text-align: left;
-                  }
-  
-                  .timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-icon {
-                      float: right;
-                  }
-  
-                  .timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-label {
-                      margin-left: 0;
-                      margin-right: 70px;
-                  }
-  
-                      .timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-label:after {
-                          left: auto;
-                          right: 0;
-                          margin-left: 0;
-                          margin-right: -9px;
-                          -moz-transform: rotate(180deg);
-                          -o-transform: rotate(180deg);
-                          -webkit-transform: rotate(180deg);
-                          -ms-transform: rotate(180deg);
-                          transform: rotate(180deg);
-                      }
-  
-          .timeline-centered .timeline-entry .timeline-entry-inner {
-              position: relative;
-              margin-left: -22px;
-          }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner:before, .timeline-centered .timeline-entry .timeline-entry-inner:after {
-                  content: " ";
-                  display: table;
-              }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner:after {
-                  clear: both;
-              }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner:before, .timeline-centered .timeline-entry .timeline-entry-inner:after {
-                  content: " ";
-                  display: table;
-              }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner:after {
-                  clear: both;
-              }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner .timeline-time {
-                  position: absolute;
-                  left: -100px;
-                  text-align: right;
-                  min-width:90px;
-                  padding: 10px;
-                  -webkit-box-sizing: border-box;
-                  -moz-box-sizing: border-box;
-                  box-sizing: border-box;
-              }
-  
-                  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-time > span {
-                      display: block;
-                  }
-  
-                      .timeline-centered .timeline-entry .timeline-entry-inner .timeline-time > span:first-child {
-                          font-size: 15px;
-                          font-weight: 600;
-                      }
-  
-                      .timeline-centered .timeline-entry .timeline-entry-inner .timeline-time > span:last-child {
-                          font-size: 12px;
-                      }
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon {
-                  background: #fff;
-                  color: #737881;
-                  display: block;
-                  width: 40px;
-                  height: 40px;
-                  -webkit-background-clip: padding-box;
-                  -moz-background-clip: padding;
-                  background-clip: padding-box;
-                  -webkit-border-radius: 20px;
-                  -moz-border-radius: 20px;
-                  border-radius: 20px;
-                  text-align: center;
-                  -moz-box-shadow: 0 0 0 5px #f5f5f6;
-                  -webkit-box-shadow: 0 0 0 5px #f5f5f6;
-                  box-shadow: 0 0 0 5px #f5f5f6;
-                  line-height: 40px;
-                  font-size: 15px;
-                  float: left;
-              }
 
-  
-              .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
-                  position: relative;
-                  background: #f5f5f6;
-                  padding: 1.7em;
-                  margin-left: 70px;
-                  -webkit-background-clip: padding-box;
-                  -moz-background-clip: padding;
-                  background-clip: padding-box;
-                  -webkit-border-radius: 3px;
-                  -moz-border-radius: 3px;
-                  border-radius: 3px;
-              }
-  
-                  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label:after {
-                      content: '';
-                      display: block;
-                      position: absolute;
-                      width: 0;
-                      height: 0;
-                      border-style: solid;
-                      border-width: 9px 9px 9px 0;
-                      border-color: transparent #f5f5f6 transparent transparent;
-                      left: 0;
-                      top: 10px;
-                      margin-left: -9px;
-                  }
-  
-                  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2, .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p {
-                      color: #737881;
-                      font-family: 'Montserrat', sans-serif;
-                      font-size: 12px;
-                    font-weight:300;
-                      margin: 0;
-                      line-height: 1.428571429;
-                  }
-  
-                      .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p + p {
-                          margin-top: 15px;
-                      }
-  
-                  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
-                      font-size: 16px;
-                      margin-bottom: 10px;
-                    color: #303641;
-                  }
-  
-                      .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
-                          color: #303641;
-                      }
-  
-                      .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 span {
-                          -webkit-opacity: .6;
-                          -moz-opacity: .6;
-                          opacity: .6;
-                          -ms-filter: alpha(opacity=60);
-                          filter: alpha(opacity=60);
-                      }
-  
-  
+.timeline {
+    position: relative;
+    padding: 20px 0 20px;
+    list-style: none;
+}
+
+.timeline:before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 3px;
+    margin-left: -1.5px;
+    background-color: #eeeeee;
+}
+
+.timeline > li {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline > li:after {
+    clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline > li:after {
+    clear: both;
+}
+
+.timeline > li > .timeline-panel {
+    float: left;
+    position: relative;
+    width: 46%;
+    padding: 20px;
+    border: 1px solid #d4d4d4;
+    border-radius: 2px;
+    -webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.175);
+    box-shadow: 0 1px 6px rgba(0,0,0,0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+    content: " ";
+    display: inline-block;
+    position: absolute;
+    top: 26px;
+    right: -15px;
+    border-top: 15px solid transparent;
+    border-right: 0 solid #ccc;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #ccc;
+}
+
+.timeline > li > .timeline-panel:after {
+    content: " ";
+    display: inline-block;
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    border-top: 14px solid transparent;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    border-left: 14px solid #fff;
+}
+
+.timeline > li > .timeline-badge {
+    z-index: 100;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    margin-left: -25px;
+    border-radius: 50% 50% 50% 50%;
+    text-align: center;
+    font-size: 1.4em;
+    line-height: 50px;
+    color: #fff;
+    background-color: #999999;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+    float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+}
+
+.timeline-badge.primary {
+    background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+    background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+    background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+    background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+    background-color: #5bc0de !important;
+}
+
+.timeline-title {
+    margin-top: 0;
+    color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+    margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+    margin-top: 5px;
+}
+
+@media(max-width:767px) {
+    ul.timeline:before {
+        left: 40px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+
+    ul.timeline > li > .timeline-badge {
+        top: 16px;
+        left: 15px;
+        margin-left: 0;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        float: right;
+    }
+
+    ul.timeline > li > .timeline-panel:before {
+        right: auto;
+        left: -15px;
+        border-right-width: 15px;
+        border-left-width: 0;
+    }
+
+    ul.timeline > li > .timeline-panel:after {
+        right: auto;
+        left: -14px;
+        border-right-width: 14px;
+        border-left-width: 0;
+    }
+}
