--- a/css/timeline.css
+++ b/css/timeline.css
@@ -67,7 +67,7 @@ body {
     position: relative;
     width: 46%;
     padding: 20px;
-    border: 1px solid #d4d4d4;
+   
     border-radius: 2px;
     -webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.175);
     box-shadow: 0 1px 6px rgba(0,0,0,0.175);
@@ -79,10 +79,10 @@ body {
     position: absolute;
     top: 26px;
     right: -15px;
-    border-top: 15px solid transparent;
-    border-right: 0 solid #ccc;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid #ccc;
+    border-top: 15px;
+    border-right: 0;
+    border-bottom: 15px;
+    border-left: 15px
 }
 
 .timeline > li > .timeline-panel:after {
@@ -129,26 +129,6 @@ body {
     left: -14px;
     border-right-width: 14px;
     border-left-width: 0;
-}
-
-.timeline-badge.primary {
-    background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-    background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-    background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-    background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-    background-color: #5bc0de !important;
 }
 
 .timeline-title {
