--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,6 @@ p {  /* General text */
     font-family: 'Open Sans', sans-serif;
     color:white;
 }
-
 .captions{
     padding: 5% 5% 5% 5%;
     color: #ffffff;
@@ -29,15 +28,15 @@ p {  /* General text */
 a{
     color: white;
 }
-
 body{
     background-color: black;
 }
-
 #hidden{
     color:black;
 }
-.navbar-toggler{
-    color:#d8ff33;
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(216,255,51, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-
+.custom-toggler.navbar-toggler {
+    border-color: transparent;
+} 
