--- a/css/timeline.css
+++ b/css/timeline.css
@@ -20,10 +20,15 @@ p{  /* General text */
 a{
     color: white;
 }
-
 body {
     background-color: black;
-  }
+}
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(216,255,51, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.custom-toggler.navbar-toggler {
+    border-color: transparent;
+} 
 
 .timeline {
     position: relative;
