--- a/css/timeline.css
+++ b/css/timeline.css
@@ -196,3 +196,9 @@ body {
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
   }
+   p {  /* text */
+    font-family: commuters-sans,sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    color:#ffffff;
+}
