set up responsive gallery

--- a/css/test.css
+++ b/css/test.css
@@ -1,6 +1,4 @@
-.container {
-    display: flex; /* or inline-flex */
-}
+
 h1, h3{  /* Titles */
     font-family: commuters-sans,sans-serif;
     font-weight: 700;
@@ -24,15 +22,6 @@ body{
 .captions{
     padding: 5% 5% 5% 5%;
 }
-#testDiv{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    transition-property: color;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 0.5s;
-}
 .form-group{
     padding-bottom: 2%;
 }
@@ -43,3 +32,46 @@ img{
     width:auto;
     height:auto;
 }
+#mainHeader{
+    text-align: center;
+}
+* {
+    box-sizing: border-box;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+    /* add code so header is responsive */
+
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+     /* add code so header is responsive */
+  }
