--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,7 @@ body{
 } 
 .captions{
     padding: 5% 5% 5% 5%;
+    text-align: center;
 }
 #testDiv{
     width: 100px;
@@ -40,6 +41,44 @@ img{
     width:auto;
     height:auto;
 }
-.container {
-    justify-content: space-evenly+ safe;
+
+#mainHeader{
+    text-align: center;
+}
+* {
+    box-sizing: border-box;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
   }
