finished contact form & about page

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,10 @@ body{
     padding-bottom: 2%;
 }
 button{
-    color:black;
+  background: #d8ff33; 
+  padding: 20px 30px 20px 30px;
+  color:black;
+  font-style: italic;
 }
 img{
     width:auto;
