--- a/css/timeline.css
+++ b/css/timeline.css
@@ -12,13 +12,14 @@ a, .captions{  /* Subtitles */
     font-family: commuters-sans,sans-serif;
     font-weight: 200;
     font-style: normal;
+    color: white;
 }
 p{  /* General text */
     font-family: 'Open Sans', sans-serif;
     color:white;
 }
-a{
-    color: white;
+.captions{
+    text-shadow: 2px 2px 5px black;
 }
 body {
     background-color: black;
@@ -30,152 +31,6 @@ body {
     border-color: transparent;
 } 
 
-.timeline {
-    position: relative;
-    padding: 20px 0 20px;
-    list-style: none;
-}
-
-.timeline:before {
-    content: " ";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    width: 3px;
-    margin-left: -1.5px;
-    background-color: #d8ff33;
-}
-
-.timeline > li {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.timeline > li:before,
-.timeline > li:after {
-    content: " ";
-    display: table;
-}
-
-.timeline > li:after {
-    clear: both;
-}
-
-.timeline > li:before,
-.timeline > li:after {
-    content: " ";
-    display: table;
-}
-
-.timeline > li:after {
-    clear: both;
-}
-
-.timeline > li > .timeline-panel {
-    float: left;
-    position: relative;
-    width: 46%;
-    padding: 20px;
-   
-    border-radius: 2px;
-    -webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.175);
-    box-shadow: 0 1px 6px rgba(0,0,0,0.175);
-}
-
-.timeline > li > .timeline-panel:before {
-    content: " ";
-    display: inline-block;
-    position: absolute;
-    top: 26px;
-    right: -15px;
-    border-top: 15px;
-    border-right: 0;
-    border-bottom: 15px;
-    border-left: 15px
-}
-
-.timeline > li > .timeline-panel:after {
-    content: " ";
-    display: inline-block;
-    position: absolute;
-    top: 27px;
-    right: -14px;
-    border-top: 14px solid transparent;
-    border-right: 0 solid #d8ff33;
-    border-bottom: 14px solid transparent;
-    border-left: 14px solid #d8ff33;
-}
-
-
-
-.timeline > li.timeline-inverted > .timeline-panel {
-    float: right;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:before {
-    right: auto;
-    left: -15px;
-    border-right-width: 15px;
-    border-left-width: 0;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:after {
-    right: auto;
-    left: -14px;
-    border-right-width: 14px;
-    border-left-width: 0;   
-}
-
-.timeline-title {
-    margin-top: 0;
-    color: inherit;
-}
-
-.timeline-body > p,
-.timeline-body > ul {
-    margin-bottom: 0;
-}
-
-.timeline-body > p + p {
-    margin-top: 5px;
-}
-
-@media(max-width:767px) {
-    ul.timeline:before {
-        left: 40px;
-    }
-
-    ul.timeline > li > .timeline-panel {
-        width: calc(100% - 90px);
-        width: -moz-calc(100% - 90px);
-        width: -webkit-calc(100% - 90px);
-    }
-
-    ul.timeline > li > .timeline-badge {
-        top: 16px;
-        left: 15px;
-        margin-left: 0;
-    }
-
-    ul.timeline > li > .timeline-panel {
-        float: right;
-    }
-
-    ul.timeline > li > .timeline-panel:before {
-        right: auto;
-        left: -15px;
-        border-right-width: 15px;
-        border-left-width: 0;
-    }
-
-    ul.timeline > li > .timeline-panel:after {
-        right: auto;
-        left: -14px;
-        border-right-width: 14px;
-        border-left-width: 0;
-    }
-}
 #overlay {
     position: fixed; /* Sit on top of the page content */
     display: none; /* Hidden by default */
