gallery update, removed php

--- a/css/custom.css
+++ b/css/custom.css
@@ -85,20 +85,13 @@ img{
     padding: 0 4px;
   }
   
-  /* Create four equal columns that sits next to each other */
-  .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
+  .col img {
     vertical-align: middle;
   }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media (max-width: 800px) {
-    .column {
+    .col {
       flex: 50%;
       max-width: 50%;
     }
@@ -106,7 +99,7 @@ img{
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
   @media (max-width: 600px) {
-    .column {
+    .col {
       flex: 100%;
       max-width: 100%;
     }
