--- a/css/custom.css
+++ b/css/custom.css
@@ -1,201 +1,236 @@
-h1, h3{  /* Titles */
-  font-family: commuters-sans,sans-serif;
-  font-weight: 700;
-  font-style: italic;
-  color:#d8ff33;
+h1,
+h3 {
+    /* Titles */
+    font-family: commuters-sans, sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    color: #d8ff33;
 }
-a, .captions, p, button {  /* Subtitles & General text */
-    font-family: commuters-sans,sans-serif;
+
+a,
+.captions,
+p,
+button {
+    /* Subtitles & General text */
+    font-family: commuters-sans, sans-serif;
     font-weight: 200;
     font-style: normal;
-    color:#ffffff;
+    color: #ffffff;
 }
-.captions{
-  padding: 5% 5% 5% 5%;
-  text-align: center;
-  text-shadow: 2px 2px 8px black;
+
+.captions {
+    padding: 5% 5% 5% 5%;
+    text-align: center;
+    text-shadow: 2px 2px 8px black;
 }
-body{
+
+body {
     background-color: black;
 }
+
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(216,255,51, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
+
 .custom-toggler.navbar-toggler {
     border-color: transparent;
-} 
-button{
-  background: #d8ff33; 
-  padding: 20px 30px 20px 30px;
-  color:black;
-  font-style: italic;
 }
-img{
-    width:auto;
-    height:auto;
+
+button {
+    background: #d8ff33;
+    padding: 20px 30px 20px 30px;
+    color: black;
+    font-style: italic;
 }
-.overlayone{
-  width:auto;
-  height:auto;
-  display: inline-block;
-  position: relative;
+
+img {
+    width: auto;
+    height: auto;
 }
+
+.overlayone {
+    width: auto;
+    height: auto;
+    display: inline-block;
+    position: relative;
+}
+
 .overlayinn {
-  background-color: #C8E5E8;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99;
-  display: center;
+    background-color: #C8E5E8;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    display: center;
 }
+
 .overlayinn:hover {
-  opacity: 1;
-  transition: opacity ease 200ms;
+    opacity: 1;
+    transition: opacity ease 200ms;
 }
+
 .overhide {
-  background: rgba(0,0,0,.75);
-  text-align: center;
-  opacity: 0;
-  transition: opacity 0.25s ease 0s;
-  padding: 124px;
+    background: rgba(0, 0, 0, .75);
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.25s ease 0s;
+    padding: 124px;
 }
-.overhide:hover  {
-  opacity: 1;
+
+.overhide:hover {
+    opacity: 1;
 }
+
 .plusicon {
-  font-family:Helvetica;
-  font-weight:900;
-  color: #fff;
-  font-size: 96px;
-     
+    font-family: Helvetica;
+    font-weight: 900;
+    color: #fff;
+    font-size: 96px;
 }
-#mainHeader{
+
+#mainHeader {
     text-align: center;
 }
+
 * {
     box-sizing: border-box;
-  }
-  
-  .row {
+}
+
+.row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-  }
-  
-  .col img {
+}
+
+.col img {
     vertical-align: middle;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media (max-width: 800px) {
+}
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+
+@media (max-width: 800px) {
     .col {
-      flex: 50%;
-      max-width: 50%;
+        flex: 50%;
+        max-width: 50%;
     }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media (max-width: 600px) {
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
+@media (max-width: 600px) {
     .col {
-      flex: 100%;
-      max-width: 100%;
+        flex: 100%;
+        max-width: 100%;
     }
-  }
-  #toplogo {
+}
+
+#toplogo {
     margin-top: 5px;
 }
 
 #toplogo img {
-    height : 15%;
-    width : 15%;
-}
-.tab { 
-  margin-left: 40px; 
-}
-*, *:before, *:after{
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing:border-box;
-  box-sizing: border-box;
+    height: 15%;
+    width: 15%;
 }
 
-.container{
-  padding: 1em 0;
-  float: left;
+.tab {
+    margin-left: 40px;
 }
+
+*,
+*:before,
+*:after {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.container {
+    padding: 1em 0;
+    float: left;
+}
+
 .content {
-  position: relative;
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    overflow: hidden;
 }
 
 .content .content-overlay {
-  background: #c8e5e8;
-  position: absolute;
-  width:auto;
-  height:auto;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
+    background: #c8e5e8;
+    position: absolute;
+    width: auto;
+    height: auto;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
 }
 
-.content:hover .content-overlay{ /* overall image overlay opacity */
-  opacity: 0.6;
+.content:hover .content-overlay {
+    /* overall image overlay opacity */
+    opacity: 0.6;
 }
 
-.content-image{
-  width: 100%;
+.content-image {
+    width: 100%;
 }
 
 .content-details {
-  position: absolute;
-  text-align: center;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
+    position: absolute;
+    text-align: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
 }
-.content:hover .content-details{
-  top: 50%;
-  left: 50%;
-  opacity: 1;
-}
-.fadeIn-top{
-  top: 20%; 
-}
-.galleryHeader{
-  padding-top: 5%; 
-  padding-bottom: 3%;
-  padding-left: 4%; 
-}
-hr{
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-color:#d8ff33;
-  border-width: 4px;
 
+.content:hover .content-details {
+    top: 50%;
+    left: 50%;
+    opacity: 1;
 }
+
+.fadeIn-top {
+    top: 20%;
+}
+
+.galleryHeader {
+    padding-top: 5%;
+    padding-bottom: 3%;
+    padding-left: 4%;
+}
+
+hr {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: #d8ff33;
+    border-width: 4px;
+}
+
 
 /* 
 p{  // General text
