added link hover animation

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,8 @@ button {
 .captions {
     padding: 5% 5% 5% 5%;
     text-align: center;
-    text-shadow: 2px 2px 8px black;
+    text-shadow: 3px 2px 4px #000000;
+    font-size: 1.2vw;
 }
 
 body {
@@ -235,6 +236,35 @@ hr {
     box-shadow: 5px 10px #c8e5e8;
     border: 1px solid;
     padding: 10px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #d8ff33;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+
+a:hover:after {
+    width: 100%;
+    left: 0;
 }
 
 
